tests/run-pass/typeck/shadowing.rs
fn main() {
    let a: bool = false;
    if a {
        let a: int = 3;
        a += 2;
    }

    a = true;
}