tests/compile-fail/typeck/invalid-while.rs
fn main() {
    while true {
        2  //! ERROR(3:9): type mismatch: expected (), got int
    }
}